update: post /outfit swagger document
